refactor: 完成dubbo 服务化